--- a/hello.html
+++ b/hello.html
@@ -7,7 +7,7 @@
     <title>Hello</title>
 </head>
 <body>
-    <h1>Hello header message</h1>
+    <h1 style="color: blue;">Hello header message</h1>
     <h2>Part two</h2>
     Hello World
 </body>
