--- a/hello.html
+++ b/hello.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <h1 style="color: blue;">Hello header message!!</h1>
+    <h1 style="color: blue;">Hello header message!</h1>
     <h2>Part two</h2>
     Hello World
 </body>
